--- a/main.ipynb
+++ b/main.ipynb
@@ -1,1 +1,146 @@
-{"nbformat":4,"nbformat_minor":0,"metadata":{"colab":{"name":"main.ipynb","provenance":[],"collapsed_sections":[],"mount_file_id":"10A9UKSznDcv6jKvwn_AALHVkCprrtL3u","authorship_tag":"ABX9TyO5GB2WebXlFiFK9RWuZ5lx"},"kernelspec":{"name":"python3","display_name":"Python 3"},"language_info":{"name":"python"}},"cells":[{"cell_type":"code","metadata":{"id":"HsbkNJTLiM1s","colab":{"base_uri":"https://localhost:8080/"},"executionInfo":{"status":"ok","timestamp":1618155220454,"user_tz":240,"elapsed":446,"user":{"displayName":"Desai Xie","photoUrl":"","userId":"17368858636263635138"}},"outputId":"36ea8f79-0a6d-4297-ec01-fb6d5f8f2e4e"},"source":["\n","%cd '/content/drive/MyDrive/Learning from a Driving Simulator/src'\n","%ls"],"execution_count":13,"outputs":[{"output_type":"stream","text":["/content/drive/MyDrive/Learning from a Driving Simulator/src\n","main.ipynb\n"],"name":"stdout"}]}]}
+{
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "main.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    },
+    "language_info": {
+      "name": "python"
+    },
+    "accelerator": "GPU"
+  },
+  "cells": [
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "wqpvRhKWhxXS",
+        "outputId": "188458fa-39d9-41e4-d96d-7de7c1829277",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')\n",
+        "%cd '/content/drive/MyDrive/Learning-from-a-Driving-Simulator/'\n",
+        "%ls"
+      ],
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Drive already mounted at /content/drive; to attempt to forcibly remount, call drive.mount(\"/content/drive\", force_remount=True).\n",
+            "/content/drive/MyDrive/Learning-from-a-Driving-Simulator\n",
+            "README.md  \u001b[0m\u001b[01;34mReport\u001b[0m/  \u001b[01;34msrc\u001b[0m/\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "dzDG9bkBhdEE",
+        "outputId": "d88617bf-16f6-4134-a5cd-7e3411773366",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Check nvidia and nvcc cuda compiler\n",
+        "\n",
+        "!nvidia-smi\n",
+        "!/usr/local/cuda/bin/nvcc --version"
+      ],
+      "execution_count": 1,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "NVIDIA-SMI has failed because it couldn't communicate with the NVIDIA driver. Make sure that the latest NVIDIA driver is installed and running.\n",
+            "\n",
+            "nvcc: NVIDIA (R) Cuda compiler driver\n",
+            "Copyright (c) 2005-2020 NVIDIA Corporation\n",
+            "Built on Wed_Jul_22_19:09:09_PDT_2020\n",
+            "Cuda compilation tools, release 11.0, V11.0.221\n",
+            "Build cuda_11.0_bu.TC445_37.28845127_0\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "C0t3EVVaWbUJ"
+      },
+      "source": [
+        "#1 - setup ssh/user \n",
+        "\n",
+        "\n",
+        "#Generate a random root password\n",
+        "import random, string\n",
+        "password = ''.join(random.choice(string.ascii_letters + string.digits) for i in range(30))\n",
+        "\n",
+        "\n",
+        "#Setup sshd\n",
+        "! apt-get install -qq -o=Dpkg::Use-Pty=0 openssh-server pwgen > /dev/null\n",
+        "\n",
+        "#Set root password\n",
+        "! echo root:$password | chpasswd\n",
+        "! mkdir -p /var/run/sshd\n",
+        "! echo \"PermitRootLogin yes\" >> /etc/ssh/sshd_config\n",
+        "! echo \"PasswordAuthentication yes\" >> /etc/ssh/sshd_config\n",
+        "\n",
+        "print(\"username: root\")\n",
+        "print(\"password: \", password)\n",
+        "\n",
+        "#Run sshd\n",
+        "get_ipython().system_raw('/usr/sbin/sshd -D &')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "H_1iQGAtYvCq"
+      },
+      "source": [
+        "# 2 - Download Ngrok\n",
+        "\n",
+        "! wget -q -c -nc https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
+        "! unzip -qq -n ngrok-stable-linux-amd64.zip"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "68P192JwZBtF"
+      },
+      "source": [
+        "# 3 - setup Ngrok - authtoken\n",
+        "\n",
+        "#Ask token\n",
+        "print(\"Get your authtoken from https://dashboard.ngrok.com/auth\")\n",
+        "import getpass\n",
+        "authtoken = getpass.getpass()\n",
+        "\n",
+        "#Create tunnel\n",
+        "get_ipython().system_raw('./ngrok authtoken $authtoken && ./ngrok tcp 22 &')"
+      ],
+      "execution_count": null,
+      "outputs": []
+    }
+  ]
+}
