--- a/main.ipynb
+++ b/main.ipynb
@@ -5,7 +5,8 @@
     "colab": {
       "name": "main.ipynb",
       "provenance": [],
-      "collapsed_sections": []
+      "collapsed_sections": [],
+      "include_colab_link": true
     },
     "kernelspec": {
       "name": "python3",
@@ -18,13 +19,23 @@
   },
   "cells": [
     {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "view-in-github",
+        "colab_type": "text"
+      },
+      "source": [
+        "<a href=\"https://colab.research.google.com/github/desaixie/Learning-from-a-Driving-Simulator/blob/main/main.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+      ]
+    },
+    {
       "cell_type": "code",
       "metadata": {
-        "id": "wqpvRhKWhxXS",
-        "outputId": "188458fa-39d9-41e4-d96d-7de7c1829277",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "wqpvRhKWhxXS",
+        "outputId": "188458fa-39d9-41e4-d96d-7de7c1829277"
       },
       "source": [
         "from google.colab import drive\n",
@@ -48,11 +59,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "dzDG9bkBhdEE",
-        "outputId": "d88617bf-16f6-4134-a5cd-7e3411773366",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dzDG9bkBhdEE",
+        "outputId": "d88617bf-16f6-4134-a5cd-7e3411773366"
       },
       "source": [
         "# Check nvidia and nvcc cuda compiler\n",
@@ -80,7 +91,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "C0t3EVVaWbUJ"
+        "id": "C0t3EVVaWbUJ",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "dbe5351d-e80d-48e9-f242-a5cf0c03bb79"
       },
       "source": [
         "#1 - setup ssh/user \n",
@@ -106,8 +121,29 @@
         "#Run sshd\n",
         "get_ipython().system_raw('/usr/sbin/sshd -D &')"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "\n",
+            "Creating config file /etc/ssh/sshd_config with new version\n",
+            "Creating SSH2 RSA key; this may take some time ...\n",
+            "2048 SHA256:HPKoIpYeityzl+/PAo+CG6w1HDx3Bckb7KQwDdW1NWk root@363383520e20 (RSA)\n",
+            "Creating SSH2 ECDSA key; this may take some time ...\n",
+            "256 SHA256:o8Ake+53ydVxCbSggEZxhoguv3G9+yCHL1Sp8OpVa4I root@363383520e20 (ECDSA)\n",
+            "Creating SSH2 ED25519 key; this may take some time ...\n",
+            "256 SHA256:8yuPTGgxdMnbX4mrTVHiQWNjtyOgaDO4Jih5fP/YD4k root@363383520e20 (ED25519)\n",
+            "Created symlink /etc/systemd/system/sshd.service → /lib/systemd/system/ssh.service.\n",
+            "Created symlink /etc/systemd/system/multi-user.target.wants/ssh.service → /lib/systemd/system/ssh.service.\n",
+            "invoke-rc.d: could not determine current runlevel\n",
+            "invoke-rc.d: policy-rc.d denied execution of start.\n",
+            "username: root\n",
+            "password:  fuUnTV6XXo9nECWrG3VSZJK05ugnmw\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -120,13 +156,17 @@
         "! wget -q -c -nc https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-linux-amd64.zip\n",
         "! unzip -qq -n ngrok-stable-linux-amd64.zip"
       ],
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "68P192JwZBtF"
+        "id": "68P192JwZBtF",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "709874c3-385c-410e-bd67-6c21c6c1d3c8"
       },
       "source": [
         "# 3 - setup Ngrok - authtoken\n",
@@ -138,6 +178,47 @@
         "\n",
         "#Create tunnel\n",
         "get_ipython().system_raw('./ngrok authtoken $authtoken && ./ngrok tcp 22 &')"
+      ],
+      "execution_count": 5,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Get your authtoken from https://dashboard.ngrok.com/auth\n",
+            "··········\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N5sGgljXaTjL"
+      },
+      "source": [
+        "Congratulations, you are ready to go. \n",
+        "On Ngrok interface https://dashboard.ngrok.com/status you'll find the tcp address and the port \n",
+        "\n",
+        "connect using the following : \n",
+        "\n",
+        "```\n",
+        "ssh root@0.tcp.ngrok.io -p [ngrok_port]\n",
+        "\n",
+        "> then enter the password generated previously\n",
+        "\n",
+        "```"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ACzGZ2_MaSQi"
+      },
+      "source": [
+        "# When done, kill Ngrok\n",
+        "\n",
+        "!kill $(ps aux | grep './ngrok' | awk '{print $2}')"
       ],
       "execution_count": null,
       "outputs": []
